<resources>
    <string name="app_name">ArtCollectionApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    //menu
    <string name="main">Main</string>
    <string name="searchDepartments">Search Departments</string>
    <string name="searchByCriteria">Search by Criteria</string>
    //MainFragment
    <string name="mainTitle">The Metropolitan Museum\n of Art Application</string>
    <string name="mainDescription">View the entire art collection\n with images and descriptions</string>
    <string name="mainSearchLabel">Use the tabs below to search\n the entire art collection</string>
    <string name="mainImageDescription">Image of the Metropolitan Museum of Art</string>
    //DepartmentItems (cardView)
    <string name="departmentTitle">Department Name:</string>
    <string name="defaultString">Default String</string>
    //DepartmentFragment
    <string name="departmentListTitle">Art Departments List</string>
    <string name="departmentListClickMsg">Click on the desired department\n to view collection</string>
    //SearchFragment
    <string name="searchTitle">Search Art Collection</string>
    <string name="searchMessage">Use the text fields to narrow collection search\n to your specifications</string>
    <string name="searchUseCase">* You can use all the fields or just one field *</string>
    <string name="searchKeyword">Search Art by Keyword *Required*</string>
    <string name="searchKeywordHint">Enter a keyword here to refine search (Example: Birds)</string>
    <string name="searchHasImages">Check the box for art only with images</string>
    <string name="searchGeoLoc">Geographical Location (origin of artwork)</string>
    <string name="searchGeoLocHint">Enter the Geographical location here (Example: Africa)</string>
    <string name="searchYearBegin">Limit search to art created after a certain year</string>
    <string name="searchYearBeginHint">Enter a year for art after this date (Example: 1700)</string>
    <string name="searchYearEnd">Limit search to art created before a certain year</string>
    <string name="searchYearEndHint">Enter a year for art before this date (Example: 1900)</string>
    <string name="yearFormatError">One of the year text fields are out of range!</string>
    <string name="yearFieldsError">Please enter a year in both start and end dates!</string>
    <string name="nothingEnteredError">Please use Keyword field (Required)!</string>
    <string name="searchButton">Search</string>
    //DisplayResultsFragment
    <string name="resultsTitle">Art Collection Results</string>
    <string name="resultsMessage">Click on any piece of art to see more details</string>
    //DetailsFragment and DisplayResults buttons
    <string name="resultsGoBack">Go\n Back</string>
    <string name="resultsGoBackToMain">Go To\n Main Menu</string>
    //ResultsItems (cardView)
    <string name="resultsArtistName">Artist Name:</string>
    <string name="resultsArtName">Art Name:</string>
    <string name="resultsCulture">Culture:</string>
    //DetailsFragment
    <string name="detailsTitle">Art Piece Name:\n %1$s</string>
    <string name="detailsArtistName">Name of Artist:</string>
    <string name="detailsArtistBio">Artist Bio:</string>
    <string name="detailsArtistGender">Artist Gender:</string>
    <string name="detailsArtCulture">Art Culture:</string>
    <string name="detailsArtPeriod">Art Time Period:</string>
    <string name="detailsArtType">Type of Art:</string>
    <string name="detailsArtClassification">Art Classification:</string>
    <string name="detailsArtDimensions">Art Dimensions:</string>
    <string name="detailsDefault">No information for this field</string>

</resources>