<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/snow3"
    tools:context=".views.SearchFragment">

    <TextView
        android:id="@+id/searchTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/searchTitle"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:textStyle="bold"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/searchMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/searchMessage"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchTitle" />

    <TextView
        android:id="@+id/searchUseCase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/searchUseCase"
        android:gravity="center"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/searchMessage"/>

    <CheckBox
        android:id="@+id/searchImagesCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/black"
        android:layout_marginTop="5dp"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchUseCase" />

    <TextView
        android:id="@+id/searchCheckBoxLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/searchHasImages"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toEndOf="@+id/searchImagesCheckBox"
        app:layout_constraintTop_toBottomOf="@+id/searchUseCase" />

    <TextView
        android:id="@+id/searchKeywordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/searchKeyword"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchImagesCheckBox" />

    <EditText
        android:id="@+id/searchKeywordEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/searchKeywordHint"
        android:textSize="13sp"
        android:inputType="text"
        android:textColor="@color/black"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:paddingStart="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchKeywordLabel" />

    <TextView
        android:id="@+id/searchOriginLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/searchGeoLoc"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchKeywordEdit" />

    <EditText
        android:id="@+id/searchOriginEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/searchGeoLocHint"
        android:textColor="@color/black"
        android:textSize="13sp"
        android:inputType="text"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:paddingStart="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchOriginLabel" />

    <TextView
        android:id="@+id/searchYearBeginLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/searchYearBegin"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchOriginEdit" />

    <EditText
        android:id="@+id/searchYearBeginEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/searchYearBeginHint"
        android:textColor="@color/black"
        android:textSize="13sp"
        android:inputType="number"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:paddingStart="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchYearBeginLabel" />

    <TextView
        android:id="@+id/searchYearEndLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/searchYearEnd"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchYearBeginEdit" />

    <EditText
        android:id="@+id/searchYearEndEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/searchYearEndHint"
        android:textColor="@color/black"
        android:textSize="13sp"
        android:inputType="number"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:paddingStart="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchYearEndLabel" />

    <TextView
        android:id="@+id/searchYearError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/yearFormatError"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:textColor="@color/red"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchYearEndEdit" />

    <TextView
        android:id="@+id/searchYearFieldsError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/yearFieldsError"
        android:textColor="@color/red"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchYearEndEdit" />

    <TextView
        android:id="@+id/searchNoKeywordEnteredError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/nothingEnteredError"
        android:textColor="@color/red"
        android:textSize="15sp"
        android:layout_marginTop="5dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchYearEndEdit" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/searchButton"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/searchProgressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>